--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "bin": "index.js",
   "keywords": [],
-  "author": "",
+  "author": "Ali Kazmi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ali-kazmi85/teams-reply-injector.git"
+  },
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
