--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "ws": "^7.4.4"
+    "chrome-remote-interface": "^0.30.0",
+    "commander": "^7.2.0",
+    "get-port": "^5.1.1"
   }
 }
