--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   },
   "license": "ISC",
   "dependencies": {
+    "chrome-remote-interface": "^0.30.0",
+    "commander": "^7.2.0",
+    "dexie": "^3.0.3",
+    "electron": "^13.0.1",
+    "get-port": "^5.1.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.14.2",
     "@babel/plugin-transform-runtime": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/runtime": "^7.14.0",
     "babel-loader": "^8.2.2",
-    "chrome-remote-interface": "^0.30.0",
-    "commander": "^7.2.0",
-    "dexie": "^3.0.3",
-    "electron": "^13.0.1",
-    "get-port": "^5.1.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   }
