--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superteams",
-  "version": "1.13.1-beta.1",
+  "version": "1.14.0",
   "description": "",
   "main": "index.js",
   "scripts": {
