--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@fluentui/react": "^8.15.1",
     "chrome-remote-interface": "^0.30.0",
     "commander": "^7.2.0",
     "dexie": "^3.0.3",
     "electron": "^13.0.1",
-    "get-port": "^5.1.1"
+    "get-port": "^5.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
@@ -30,7 +33,11 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/runtime": "^7.14.0",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "babel-loader": "^8.2.2",
+    "ts-loader": "^9.2.2",
+    "typescript": "^4.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   }
