--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "commander": "^7.2.0",
     "dexie": "^3.0.3",
     "electron": "^13.0.1",
-    "get-port": "^5.1.1"
+    "get-port": "^5.1.1",
+    "wait-on": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
